# zabbix-module-sysrepo

./: CMakeLists.txt  README.md  zbx_sysrepo.conf
src/: sysrepo.c
templates/5.0/: template_sysrepo.xml
